src/styles/SectionContact.css
.marcador {
    border: solid red 4px;
    width: 1%;
    height: 1%;
    border-radius: 100%;
}

.contenedorconctact {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    font-family: "Philosopher", sans-serif;
    padding-bottom: 5%;
}

.titlecontact {
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row-start: 0;
    grid-row-end: 1;
    text-align: center;
    padding: 5% 0;
    margin-bottom: 2%;
    font-family: "Philosopher", sans-serif;
}

.contenedormapa {
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 1;
    grid-column-end: 3;
    width: 90%;
    max-height: 7em;
    padding-left: 20%;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.mapa:hover {
    cursor: pointer;
}

.logosydireccion {
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 3;
    grid-column-end: 4;
    padding-left: 0%;
}

.mapa {
    height: 100%;
    width: 100%;
}

.listalogos {
    list-style: none;
    color: black;
}

@media all and (max-width: 768px) {
    .contenedorconctact {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
        text-align: center;
    }

    .titlecontact {
        grid-column-start: 1;
        grid-column-end: 6;
    
        grid-row-start: 0;
        grid-row-end: 1;
        text-align: center;
        
        padding: 1% 0;
        margin-top: 2%;
        margin-bottom: 2%;
       
        font-family: "Philosopher", sans-serif;
    }

    .contenedormapa {
        min-width: 80%;
        padding-left: 5%;
       
        padding-right: 0%;
        grid-row-start: 3;
        grid-row-end: 4;
        grid-column-start: 0;
        grid-column-end: 4;
        margin-top: 20px;
      
    }

    .logosydireccion {
        
            display: flex;
            justify-content: center;
            padding-right: 0%;
            grid-row-start: 3;
            grid-row-end: 4;
            grid-column-start: 4;
            grid-column-end: 6;
            margin-top: 20px;
        
    }

    .elementoslista {
        padding: 0;
        float: left;
        
    }

    .mapa {
        display: flex;
        height: 100%;
        width: 70%;
    }
}

